--- a/pom.xml
+++ b/pom.xml
@@ -69,8 +69,13 @@
         </dependency>
         <dependency>
         <groupId>org.aspectj</groupId>
-        <artifactId>aspectjweaver</artifactId>
-        <version>1.9.9.1</version>
+            <artifactId>aspectjweaver</artifactId>
+             <version>1.9.9.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.4.0</version>
         </dependency>
     </dependencies>
 </project>
